KSENROLL-10596:updated margin for spacing issues
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@60224 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/ks-fonts.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/ks-fonts.less
@@ -41,4 +41,5 @@ font-size:1.5em;
 }
 .titleClusters{
 font-size:1.7em;
+margin-top:15px;
 }
